--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ bower_components/
 node_modules/
 builds/development/libs/**/*
 builds/development/css/style.min.css
+builds/dist/video/LightStreaksDeepBlue.mp4
