--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "jquery": "^3.1.0",
     "bootstrap": "^3.3.7",
     "background-video": "*",
-    "font-awesome": "Font-Awesome#^4.6.3"
+    "font-awesome": "Font-Awesome#^4.6.3",
+    "video.js": "^5.13.0"
   }
 }
