--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.5.2",
     "gulp-csso": "^1.0.0",
     "gulp-sass": "^2.3.2",
